hphp/hack/test/typecheck/immvector_immutable2.php.exp
ERROR: File "immvector_immutable2.php", line 17, characters 3-14:
You cannot mutate this (Typing[4011])
  File "immvector_immutable2.php", line 15, characters 9-27:
  This is an object of type ImmVector<int>
